--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="#home" class="page-scroll">Principal</a></li>
             <li><a href="#about" class="page-scroll">Carmen y Fer</a></li>
             <li><a href="#love-story" class="page-scroll">Historia</a></li>
-            <li><a href="#gallery" class="page-scroll">Fotos</a></li>
+            <li><a href="#gallery" class="page-scroll">Galería</a></li>
             <li><a href="#gifts-registry" class="page-scroll">Regalos</a></li>
             <li><a href="#schedule" class="page-scroll">Horario</a></li>
             <li><a href="#location" class="page-scroll">Ubicación</a></li>
@@ -60,7 +60,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
           <ul class="nav navbar-nav">
             <li><a href="#home" class="page-scroll">Principal</a></li>
-            <li><a href="#about" class="page-scroll">Acerca de nosotros</a></li>
+            <li><a href="#about" class="page-scroll">Carmen y Fer</a></li>
             <li><a href="#love-story" class="page-scroll">Historia</a></li>
             <li><a href="#gallery" class="page-scroll">Galería</a></li>
             <li><a href="#gifts-registry" class="page-scroll">Regalos</a></li>
@@ -86,14 +86,16 @@
           <div id="about" class="row groom-bride">
             <div class="col-sm-3 text-center">
               <h3>¿Quién es Fer?</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+              <p>Él es el hombre más cariñoso y tierno que he conocido. Todos los días se esfuerza por ser mejor. Es la persona con quien quiero pasar el resto de mi vida.</p>
+              <p>- Carmen -</p>
             </div>
             <div class="col-sm-6 big-photo text-center">
               <img src="img/about-us.png" alt="about-us">
             </div>
             <div class="col-sm-3 text-center">
               <h3>¿Quién es Carmen?</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+              <p>Ella es la mujer más dulce, cariñosa y amante de los perros que he conocido. Es la persona con quien quiero pasar el resto de mi vida.</p>
+              <p>- Fer -</p>
             </div>
             <div class="clearfix"></div>
           </div>
@@ -106,7 +108,6 @@
           <div class="devider">
             <img src="img/devider-color.png" alt="devider">
           </div>
-          <p class="intro-text text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, doloribus ab. Aliquid incidunt quibusdam aut nisi dolores</p>
           <div id="timer" class="text-center">
             <div class="timer-item">
               <span class="days digit"></span>
@@ -132,8 +133,6 @@
         <div>
           <h2>LOVE ST<img src="img/icon-ring-pink.png" alt="ring">RY</h2>
           <h3>Cómo decidimos que debemos<br> estar juntos <span>para siempre!</span></h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
-
           <!-- Timeline block -->
           <div class="timeline-block timeline-vertical tl-theme-press">
             <div class="timeline-block_item">
@@ -141,13 +140,13 @@
                 <img src="img/timeline-icon.png" alt="Picture">
               </div> <!-- timeline-img -->
               <div class="timeline-item-content">
-                <h3><span>Title of section 1</span></h3>
+                <h3><span>El viaje</span></h3>
                 <div class="timeline-item-date">
                   <span>
-                    06 Jan 2016
+                    15 Ago 2016
                   </span>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <p>Coincidimos en un viaje de turismo por Huehuetenango, cada uno iba con sus amistades, sin saber que ese día estaría marcado en nuestra historia pues nos vimos por primera vez.</p>
               </div> <!-- timeline-content -->
             </div> <!-- timeline-block -->
             <div class="timeline-block_item">
@@ -155,13 +154,13 @@
                 <img src="img/timeline-icon.png" alt="Picture">
               </div> <!-- timeline-img -->
               <div class="timeline-item-content">
-                <h3><span>Title of section 1</span></h3>
+                <h3><span>Nuestra primera cita</span></h3>
                 <div class="timeline-item-date">
                   <span>
-                    12 Feb 2016
+                    21 Ago 2016
                   </span>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <p>Fer: La invité a mi cumpleaños, pero no pudo asistir, por lo que salimos a almozar el domingo y nos llevamos tan bien que queríamos mantener la amistad.</p>
               </div> <!-- timeline-content -->
             </div> <!-- timeline-block -->
             <div class="timeline-block_item">
@@ -169,13 +168,13 @@
                 <img src="img/timeline-icon.png" alt="Picture">
               </div> <!-- timeline-img -->
               <div class="timeline-item-content">
-                <h3><span>Title of section 1</span></h3>
+                <h3><span>Nos hicimos novios</span></h3>
                 <div class="timeline-item-date">
                   <span>
-                    03 Mar 2016
+                    14 Oct 2016
                   </span>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <p>Carmen: En una cena romántica en Earth Lodge él me pidió noviazgo, ¡estaba taaan nervioso!, le dije que sí. Allí empezó nuestra gran aventura.</p>
               </div> <!-- timeline-content -->
             </div> <!-- timeline-block -->
             <div class="timeline-block_item">
@@ -183,13 +182,27 @@
                 <img src="img/timeline-icon.png" alt="Picture">
               </div> <!-- timeline-img -->
               <div class="timeline-item-content">
-                <h3><span>Title of section 1</span></h3>
+                <h3><span>Viajes</span></h3>
                 <div class="timeline-item-date">
                   <span>
-                    23 Apr 2016
+                    2016 - 2018
                   </span>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <p>Una de las cosas que nos encanta es viajar, es nuestra pasión y qué mejor que compartirla juntos. Hemos viajado por casi toda Guatemala en nuestro 4x4, motocicleta y agencias de turismo viviendo aventuras únicas, algunas de ellas extremas.</p>
+              </div> <!-- timeline-content -->
+            </div> <!-- timeline-block -->
+            <div class="timeline-block_item">
+              <div class="timeline-item-img cd-picture">
+                <img src="img/timeline-icon.png" alt="Picture">
+              </div> <!-- timeline-img -->
+              <div class="timeline-item-content">
+                <h3><span>Compromiso</span></h3>
+                <div class="timeline-item-date">
+                  <span>
+                    2 Dic 2017
+                  </span>
+                </div>
+                <p>Carmen: a la orilla del lago Atitlán, con vista a los volcanes que jamás podré olvidar, Fer me pidió que hiciéramos una vida juntos, ¡fue uno de los días más felices de nuestras vidas!.</p>
               </div> <!-- timeline-content -->
             </div> <!-- timeline-block -->
             <span class="line"></span>
@@ -203,7 +216,6 @@
           <div class="devider">
             <img src="img/devider-color.png" alt="devider">
           </div>
-          <p class="intro-text text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, doloribus ab. Aliquid incidunt quibusdam aut nisi dolores</p>
           <div class="row">
             <ul class="timeline">
               <li><span>15.00</span></li>
@@ -238,85 +250,6 @@
           </div>
         </div>
       </section>
-      <!-- Bridesmaid and Groomsman -->
-      <section class="bridesmaid-groomsman people text-center">
-        <div class="wrap">
-          <h2 class="">Bridesmaid & Groomsman</h2>
-          <div class="devider">
-            <img src="img/devider-color.png" alt="devider">
-          </div>
-          <p class="intro-text text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, doloribus ab. Aliquid incidunt quibusdam aut nisi dolores</p>
-          <div class="row">
-            <div class="col-sm-4 col-sm-offset-1">
-              <div class="photo-wrap">
-                <div class="bride-photo">
-                  <img src="img/bridesmaid.png" alt="bridesmaid">
-                </div>
-              </div>
-              <h3 class="name">Nina Matvienko</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-              <!-- Social icons -->
-              <ul class="social-icons si-square-o si-pink si-border-none">
-                <li>
-                  <a href="#" title="Facebook">
-                    <i class="fa fa-facebook fa-lg"></i>
-                  </a>
-                </li>
-                <li> 
-                  <a href="#" title="Google">
-                    <i class="fa fa-google fa-lg"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" title="Instagram">
-                    <i class="fa fa-instagram fa-lg"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" title="Twitter">
-                    <i class="fa fa-twitter fa-lg"></i>
-                  </a>
-                </li>
-              </ul> <!-- /Social icons -->
-            </div>
-            <div class="col-sm-2 icon-glasses">
-              <img src="img/glasses-icon.png" alt="glasses">
-            </div>
-            <div class="col-sm-4">
-              <div class="photo-wrap">
-                <div class="groom-photo">
-                  <img src="img/groomsman.png" alt="groomsman">
-                </div>
-              </div>
-              <h3 class="name">Vladislav Ionov</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-              <!-- Social icons -->
-              <ul class="social-icons si-square-o si-pink si-border-none">
-                <li>
-                  <a href="#" title="Facebook">
-                    <i class="fa fa-facebook fa-lg"></i>
-                  </a>
-                </li>
-                <li> 
-                  <a href="#" title="Google">
-                    <i class="fa fa-google fa-lg"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" title="Instagram">
-                    <i class="fa fa-instagram fa-lg"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" title="Twitter">
-                    <i class="fa fa-twitter fa-lg"></i>
-                  </a>
-                </li>
-              </ul> <!-- /Social icons -->
-            </div>
-          </div>
-        </div>
-      </section>
       <!-- Gallery -->
       <section id="gallery" class="gallery row">
         <div class="wrap">
@@ -324,7 +257,7 @@
           <div class="devider">
             <img src="img/devider-color.png" alt="devider">
           </div>
-          <p class="intro-text text-center">Dear guests you can also upload your wedding photos on Instagram, hashtag them <span>#ourWedding</span></p>
+          <p class="intro-text text-center">Queridos invitados e invitadas pueden subir sus fotografías utilizando el hashtag  <a href="https://www.instagram.com/explore/tags/bodacarmenyfer2018/" target="_blank"><span>#bodacarmenyfer2018</span></a></p>
           <!-- OWL Gallery -->
           <div class="owl-carousel gallery-carousel owl-theme responsive-0">
             <div>
@@ -337,7 +270,7 @@
               <a href="img/carousel/gallery3.png" data-lightbox="roadtrip"><img src="img/carousel/gallery3.png" alt=""></a>
             </div>
           </div>
-          <a href="color-gallery.html" class="more-button text-center pink-color">View more</a>
+          <a href="https://www.instagram.com/explore/tags/bodacarmenyfer2018/" class="more-button text-center pink-color" target="_blank">Ver más</a>
         </div>
       </section>
       <!-- Gifts registry -->
@@ -347,7 +280,7 @@
           <div class="devider">
             <img src="img/devider-color.png" alt="devider">
           </div>
-          <p class="intro-text text-center">Hola, gracias por tomarte tu tiempo en pensar qué nos podrías regalar. Lo hemos hecho más simple para ti y nosotros, por lo que aceptaremos pagos en efectivo y paypal.</p>
+          <p class="intro-text text-center">Hola, gracias por tomarte el tiempo en pensar qué nos podrías regalar. Lo hemos hecho más simple para ti y nosotros, estos son los lugares donde puedes elegir nuestro regalo.</p>
           <div class="row indent-bottom">
             <div class="col-xs-12 col-sm-12 indent-bottom-sm">
               <a href="https://www.amazon.com/wedding/share/bodacarmenyfer" target="_blank">
@@ -365,7 +298,7 @@
       <section class="attend">
         <div class="wrap">
           <div id="form-header">
-            <h2 class="text-center">Asistirás a la boda?</h2>
+            <h2 class="text-center">¿Asistirás a la boda?</h2>
             <div class="devider">
               <img src="img/devider-color.png" alt="devider">
             </div>
@@ -378,7 +311,7 @@
               </div>
               <label class="control-label"></label>
               <div class="form-field col-sm-6 button-load-data">
-                <button class="btn" id="get-invitation-button">Ver mis datos</button>
+                <button class="btn" id="get-invitation-button">Ver mi invitación</button>
               </div>
             </div>
           </div>
@@ -415,19 +348,16 @@
       <!-- Location -->
       <section id="location" class="location text-center">
         <div class="wrap">
-          <h2 class="text-center">La ubicación de nuestra fiesta</h2>
+          <h2 class="text-center">Ubicación</h2>
           <div class="devider">
             <img src="img/devider-color.png" alt="devider">
           </div>
-          <p class="intro-text text-center">Desde que nos conocimos nuestra vida ha estado llena de viajes, decidimos empezar toda nuestra aventura de compromiso en el lago de atitlán y es por eso que hemos decidido que nuestra boda sea en este mismo lugar</p>
+          <p class="intro-text text-center">Desde que nos conocimos nuestra vida ha estado llena de viajes, decidimos empezar toda nuestra aventura de compromiso en el lago de Atitlán y es por eso que hemos decidido que nuestra boda sea en este mismo lugar</p>
           <div class="row">
-            <div class="col-sm-6">
-              <div class="ev-name">Ceremonia</div>
-              <p>Calle Monterrey, Panajachel 07010 (502) 7762 6114</p>
-            </div>
-            <div class="col-sm-6">
-              <div class="ev-name">Fiesta</div>
-              <p>Calle Monterrey, Panajachel 07010 (502) 7762 6114</p>
+            <div class="col-sm-12">
+              <div class="ev-name">Lugar</div>
+              <a href="https://goo.gl/maps/AFJn781gVo22" target="_blank"><p>Calle Monterrey, Panajachel 07010 (502) 7762 6114</p></a>
+              
             </div>
           </div>
         </div>
