añadir nueva solapa para la fecha

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
       </div>
       <div class="about-us">
         <div class="wrap">
-          
           <div id="about" class="row groom-bride">
             <div class="col-sm-3 text-center">
               <h3>¿Quién es Fer?</h3>
@@ -203,6 +202,20 @@
                   </span>
                 </div>
                 <p>Carmen: a la orilla del lago Atitlán, con vista a los volcanes que jamás podré olvidar, Fer me pidió que hiciéramos una vida juntos, ¡fue uno de los días más felices de nuestras vidas!.</p>
+              </div> <!-- timeline-content -->
+            </div> <!-- timeline-block -->
+            <div class="timeline-block_item">
+              <div class="timeline-item-img cd-picture">
+                <img src="img/timeline-icon.png" alt="Picture">
+              </div> <!-- timeline-img -->
+              <div class="timeline-item-content">
+                <h3><span>Boda</span></h3>
+                <div class="timeline-item-date">
+                  <span>
+                    8 Dic 2018
+                  </span>
+                </div>
+                <p>El día en que uniremos nuestras vidas.</p>
               </div> <!-- timeline-content -->
             </div> <!-- timeline-block -->
             <span class="line"></span>
