actualizar la galería de imágenes y también link a bodas cemaco

--- a/index.html
+++ b/index.html
@@ -274,13 +274,137 @@
           <!-- OWL Gallery -->
           <div class="owl-carousel gallery-carousel owl-theme responsive-0">
             <div>
-              <a href="img/carousel/gallery1.png" data-lightbox="roadtrip"><img src="img/carousel/gallery1.png" alt=""></a>
+              <a
+                href="img/carousel/carousel_1-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_1.jpg" alt="">
+              </a>
             </div>
             <div>
-              <a href="img/carousel/gallery2.png" data-lightbox="roadtrip"><img src="img/carousel/gallery2.png" alt=""></a>
+              <a
+                href="img/carousel/carousel_2-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_2.jpg" alt="">
+              </a>
             </div>
             <div>
-              <a href="img/carousel/gallery3.png" data-lightbox="roadtrip"><img src="img/carousel/gallery3.png" alt=""></a>
+              <a
+                href="img/carousel/carousel_3-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_3.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_4-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_4.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_5-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_5.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_6-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_6.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_7-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_7.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_8-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_8.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_9-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_9.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_10-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_10.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_11-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_11.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_12-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_12.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_13-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_13.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_14-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_14.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_15-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_15.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_16-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_16.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_17-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_17.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_18-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_18.jpg" alt="">
+              </a>
+            </div>
+            <div>
+              <a
+                href="img/carousel/carousel_19-min.jpg"
+                data-lightbox="roadtrip">
+                  <img src="img/carousel_19.jpg" alt="">
+              </a>
             </div>
           </div>
           <a href="https://www.instagram.com/explore/tags/bodacarmenyfer2018/" class="more-button text-center pink-color" target="_blank">Ver más</a>
@@ -295,14 +419,19 @@
           </div>
           <p class="intro-text text-center">Hola, gracias por tomarte el tiempo en pensar qué nos podrías regalar. Lo hemos hecho más simple para ti y nosotros, estos son los lugares donde puedes elegir nuestro regalo.</p>
           <div class="row indent-bottom">
-            <div class="col-xs-12 col-sm-12 indent-bottom-sm">
+            <div class="col-xs-12 col-sm-4 indent-bottom-sm">
               <a href="https://www.amazon.com/wedding/share/bodacarmenyfer" target="_blank">
                 <img src="img/gifts/amazon.png" alt="Regalos en Amazon">
               </a>
             </div>
-            <div class="col-xs-12 col-sm-12 indent-bottom-sm">
+            <div class="col-xs-12 col-sm-4 indent-bottom-sm">
               <a href="http://bodas.max.com.gt/RegistryDisplay.cfm?id=38838&cid=1321" target="_blank">
                 <img class="max-distelsa" src="img/gifts/max.png" alt="Regalos en Max">
+              </a>
+            </div>
+            <div class="col-xs-12 col-sm-4 indent-bottom-sm">
+              <a href="https://cemaco.com/giftregistry/index/apiView/id/201812-0129/" target="_blank">
+                <img class="cemaco" src="img/gifts/cemaco.png" alt="Regalos en Cemaco">
               </a>
             </div>
         </div>
