corregir titulos del timeline

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <img src="img/timeline-icon.png" alt="Picture">
               </div> <!-- timeline-img -->
               <div class="timeline-item-content">
-                <h3><span>Nuestra primera cita</span></h3>
+                <h3><span>Primer Cita</span></h3>
                 <div class="timeline-item-date">
                   <span>
                     21 Ago 2016
@@ -167,7 +167,7 @@
                 <img src="img/timeline-icon.png" alt="Picture">
               </div> <!-- timeline-img -->
               <div class="timeline-item-content">
-                <h3><span>Nos hicimos novios</span></h3>
+                <h3><span>Noviazgo</span></h3>
                 <div class="timeline-item-date">
                   <span>
                     14 Oct 2016
