cambiar el texto por decidimos hacer una vida juntos

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     2 Dic 2017
                   </span>
                 </div>
-                <p>Carmen: a la orilla del lago Atitlán, con vista a los volcanes que jamás podré olvidar, Fer me pidió que hiciéramos una vida juntos, ¡fue uno de los días más felices de nuestras vidas!.</p>
+                <p>Carmen: a la orilla del lago Atitlán, con vista a los volcanes que jamás podré olvidar, decidimos hacer una vida juntos, ¡fue uno de los días más felices de nuestras vidas!.</p>
               </div> <!-- timeline-content -->
             </div> <!-- timeline-block -->
             <div class="timeline-block_item">
