--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     2016 - 2018
                   </span>
                 </div>
-                <p>Una de las cosas que nos encanta es viajar, es nuestra pasión y qué mejor que compartirla juntos. Hemos viajado por casi toda Guatemala en nuestro 4x4, motocicleta y agencias de turismo viviendo aventuras únicas, algunas de ellas extremas.</p>
+                <p>Una de las cosas que nos encanta es viajar, es nuestra pasión y qué mejor que compartirla juntos. Hemos viajado por casi toda Guatemala en nuestro 4x4, motocicleta y agencias de turismo, hemos vivido aventuras únicas, algunas de ellas extremas.</p>
               </div> <!-- timeline-content -->
             </div> <!-- timeline-block -->
             <div class="timeline-block_item">
