--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#home" class="page-scroll">Principal</a></li>
             <li><a href="#about" class="page-scroll">Carmen y Fer</a></li>
+            <li><a href="#attend" class="page-scroll">Invitación</a></li>
             <li><a href="#love-story" class="page-scroll">Historia</a></li>
             <li><a href="#gallery" class="page-scroll">Galería</a></li>
             <li><a href="#gifts-registry" class="page-scroll">Regalos</a></li>
@@ -61,6 +62,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#home" class="page-scroll">Principal</a></li>
             <li><a href="#about" class="page-scroll">Carmen y Fer</a></li>
+            <li><a href="#attend" class="page-scroll">Invitación</a></li>
             <li><a href="#love-story" class="page-scroll">Historia</a></li>
             <li><a href="#gallery" class="page-scroll">Galería</a></li>
             <li><a href="#gifts-registry" class="page-scroll">Regalos</a></li>
@@ -437,7 +439,7 @@
         </div>
       </section>
       <!-- Form -->
-      <section class="attend">
+      <section class="attend" id="attend">
         <div class="wrap">
           <div id="form-header">
             <h2 class="text-center">Tu invitación</h2>
