--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="ev-name">Lugar</div>
-              <a href="https://goo.gl/maps/AFJn781gVo22" target="_blank"><p>Calle Monterrey, Panajachel 07010 (502) 7762 6114</p></a>
+              <a href="https://goo.gl/maps/AFJn781gVo22" target="_blank"><p>Hotel Jardines del lago, Panajachel - (502)7762 6114</p></a>
               
             </div>
           </div>
