--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <div class="devider">
             <img src="img/devider-color.png" alt="devider">
           </div>
-          <p class="intro-text text-center">Queridos invitados e invitadas pueden subir sus fotografías utilizando el hashtag  <a href="https://www.instagram.com/explore/tags/bodacarmenyfer2018/" target="_blank"><span>#bodacarmenyfer2018</span></a></p>
+          <p class="intro-text text-center">Queridos invitados e invitadas pueden subir sus fotografías utilizando el hashtag  <a href="https://www.instagram.com/explore/tags/bodacarmenyfer2018/" target="_blank"><span>#bodacyf2018</span></a></p>
           <!-- OWL Gallery -->
           <div class="owl-carousel gallery-carousel owl-theme responsive-0">
             <div>
